Fix nav icons
Remove notification overlap and fix mobile navigation view

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -1763,23 +1763,6 @@ label {
     font-weight: normal;
 }
 
-.nav>li>a.dropdown-toggle {
-    padding: 15px 6px;
-}
-
-.badge-navbar-user{
-   background:red;
-   border-radius: 40%;
-   font-size: 65%;
-   height: auto;
-   margin: 0;
-   padding:5px;
-   position:absolute;
-   right:-3px;
-   top:5px;
-   width: auto;
-  }
-
 @media only screen and (max-width: 480px) {
     .thumbnail_graph_table b { font-size : 6px;}
     .thumbnail_graph_table img {
